# led-matrix-clock

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
resources/: bg.afdesign  temperature-scale.afdesign  weather-icons.afdesign
scripts/: build.sh  build_init.sh  run.sh
src/: main.cpp  matrix_driver.h  matrix_driver_rpi.cpp  matrix_driver_shim.cpp
